deploy/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acfe-frontend
  namespace: acfe
spec:
  selector:
    app: acfe-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
